--- a/styles.css
+++ b/styles.css
@@ -235,6 +235,10 @@ body {
   margin-bottom: 20px;
 }
 
+.additional-info__education-university {
+  margin-bottom: 30px;
+}
+
 .additional-info__education-university-durability {
   color: var(--durability-text-color);
   text-align: left;
