--- a/styles.css
+++ b/styles.css
@@ -76,8 +76,6 @@ body {
 .contact-info__header {
   color: var(--primary-text-color);
   margin-bottom: 15px;
-  text-decoration-color: var(--text-decoration-color);
-  text-decoration-line: underline;
 }
 
 .contact-info__sub-header {
@@ -165,10 +163,18 @@ body {
   margin-bottom: 15px;
 }
 
+.skills__wrapper {
+  display: flex;
+  justify-content: space-around;
+}
+
 .skills__text {
   color: var(--secondary-text-color);
   text-align: justify;
   width: fit-content;
+  padding: 2px 10px;
+  border: 2px solid var(--border-color);
+  border-radius: 10px;
 }
 
 /* Experience and additional info styles */
